--- a/index.html
+++ b/index.html
@@ -34,13 +34,8 @@
         <div class="left2 animate__animated animate__fadeInLeft">
           <h1>Create Account</h1>
           <div class="btns">
-            <button class="btn1">
-              <img
-                width="20"
-                height="27"
-                src="https://cdn-icons-png.flaticon.com/512/59/59439.png"
-                alt=""
-              />
+            <button class="btn1" id="loginWithGithub"> 
+             <i class="fa-brands fa-github fa-xl" style="color: #000000;"></i>
             </button>
             <button id="loginWithGoogle" class="btn2">
               <img
