--- a/login.html
+++ b/login.html
@@ -28,13 +28,8 @@
         <div class="left animate__animated animate__fadeInRight">
           <h1>LOG IN</h1>
           <div class="btns">
-            <button id="loginWithFb" class="btn1">
-              <img
-                width="20"
-                height="27"
-                src="https://cdn-icons-png.flaticon.com/512/59/59439.png"
-                alt=""
-              />
+            <button id="loginWithGithub" class="btn1" >
+              <i class="fa-brands fa-github fa-xl" style="color: #000000;"></i>
             </button>
             <button id="loginWithGoogle" class="btn2">
               <img
