--- a/post.html
+++ b/post.html
@@ -35,7 +35,7 @@
 <div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link text-white fontStyle" href="all-blogs.html">All Blogs</a>
+							<a class="nav-link text-white fontStyle" id="current" href="all-blogs.html">All Blogs</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link text-white fontStyle" href="my-blogs.html">My Blog</a>
