--- a/post.html
+++ b/post.html
@@ -38,7 +38,7 @@
 							<a class="nav-link text-white fontStyle" id="current" href="all-blogs.html">All Blogs</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white fontStyle" href="my-blogs.html">My Blog</a>
+							<a class="nav-link text-white fontStyle me-4" id="active" href="my-blogs.html">My Blog</a>
 						</li>
 					</ul>
 <!-- profile section -->
