--- a/post.html
+++ b/post.html
@@ -35,10 +35,10 @@
 <div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link text-white fontStyle" id="current" href="all-blogs.html">All Blogs</a>
+							<a class="nav-link text-white fontStyle"  href="all-blogs.html">All Blogs</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white fontStyle me-4" id="active" href="my-blogs.html">My Blog</a>
+							<a class="nav-link text-white fontStyle me-4"  href="my-blogs.html">My Blog</a>
 						</li>
 					</ul>
 <!-- profile section -->
