--- a/my-blogs.html
+++ b/my-blogs.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css"
     />
-    <title>Document</title>
+    <title>My Blogs</title>
 </head>
 <body>
     
@@ -61,6 +61,19 @@
         </div>
       </div>
     </nav>
+
+  <!-- All blogs -->
+
+    <div id="container" class="container d-flex gap-4 m-5 flex-wrap"></div>
+
+    <!-- loader -->
+
+    <div id="loader-overlay">
+        <div class="spinner-border text-primary loader-spinner" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+
 
  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
