--- a/all-blogs.html
+++ b/all-blogs.html
@@ -22,7 +22,7 @@
     />
     <title>All Blogs</title>
 </head>
-<body>
+<body class="bg-black">
     
 
 <nav class="navbar navbar-expand-lg bg-black">
@@ -64,7 +64,7 @@
 
 <!-- All blogs  -->
 
-<div class="container d-flex gap-4 m-5 flex-wrap" id="container"></div>
+<div class="container d-flex gap-4 m-5 flex-wrap" id="container1"></div>
 
 <!-- loader -->
 
