--- a/post.html
+++ b/post.html
@@ -22,7 +22,7 @@
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css"
     />
   </head>
-  <body>
+  <body class="bg-black">
     <!-- post navbar -->
     <nav class="navbar navbar-expand-lg bg-black">
       <div class="container navbar-container">
