--- a/all-blogs.html
+++ b/all-blogs.html
@@ -64,7 +64,7 @@
 
 <!-- All blogs  -->
 
-<div class="container d-flex gap-4 m-5 flex-wrap" id="container1"></div>
+<div class="container d-flex gap-4 m-5 flex-wrap" id="container"></div>
 
 <!-- loader -->
 
