--- a/my-blogs.html
+++ b/my-blogs.html
@@ -36,7 +36,7 @@
 <div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link text-white fontStyle" href="all-blogs.html">All Blogs</a>
+							<a class="nav-link text-white fontStyle text-danger" href="all-blogs.html">All Blogs</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link text-white fontStyle me-4" id="active" href="my-blogs.html">My Blog</a>
