--- a/my-blogs.html
+++ b/my-blogs.html
@@ -39,7 +39,7 @@
 							<a class="nav-link text-white fontStyle text-danger" href="all-blogs.html">All Blogs</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white fontStyle me-4" id="active" href="my-blogs.html">My Blog</a>
+							<a class="nav-link fontStyle me-4" href="my-blogs.html">My Blog</a>
 						</li>
 					</ul>
 <!-- profile section -->
