--- a/my-blogs.html
+++ b/my-blogs.html
@@ -64,7 +64,7 @@
 
   <!-- All blogs -->
 
-    <div id="container" class="container  d-flex gap-4 m-5 flex-wrap"></div>
+    <div id="container1" class="container  d-flex gap-4 m-5 flex-wrap"></div>
 
     <!-- loader -->
 
