--- a/post.html
+++ b/post.html
@@ -22,11 +22,11 @@
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css"
     />
   </head>
-  <body>
+  <body class="bgBackground">
     <!-- post navbar -->
-    <nav class="navbar navbar-expand-lg bg-black">
+    <nav class="navbar navbar-expand-lg">
       <div class="container navbar-container">
-        <a class="navbar-brand text-white fs-2" href="#">My Post</a>
+        <a class="navbar-brand fs-2" href="#">My Post</a>
         <!-- Toggle button for mobile -->
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 					<span class="navbar-toggler-icon"></span>
@@ -35,10 +35,10 @@
 <div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link text-white fontStyle"  href="all-blogs.html">All Blogs</a>
+							<a class="nav-link fontStyle"  href="all-blogs.html">All Blogs</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white fontStyle me-4"  href="my-blogs.html">My Blog</a>
+							<a class="nav-link fontStyle me-4"  href="my-blogs.html">My Blog</a>
 						</li>
 					</ul>
 <!-- profile section -->
