--- a/all-blogs.html
+++ b/all-blogs.html
@@ -22,7 +22,7 @@
     />
     <title>All Blogs</title>
 </head>
-<body>
+<body class="bgBackground2">
     
 
 <nav class="navbar navbar-expand-lg bg-black">
