--- a/my-blogs.html
+++ b/my-blogs.html
@@ -22,7 +22,7 @@
     />
     <title>My Blogs</title>
 </head>
-<body>
+<body class="bgBackground1">
     
 
 <nav class="navbar navbar-expand-lg bg-black">
