--- a/post.html
+++ b/post.html
@@ -66,14 +66,16 @@
         
         <div class="col-12 col-sm-12 col-md-4">
           <div class="card p-4 borderColor">
+
+            <h2 class="text-white my-3">Create a New Post</h2>
             <form class="p-2">
-              <div class="mb-3">
-                <label for="post-title" class="form-label text-white fontStyle"
+              <div class="mb-4">
+                <label for="post-title" class="form-label fs-3 text-white fontStyle"
                   >Title</label
                 >
                 <input type="text" class="form-control bg-transparent text-white" id="post-title" />
               </div>
-              <label for="postdescrib" class="form-label text-white fontStyle"
+              <label for="postdescrib" class="form-label fs-3 text-white fontStyle"
                 >Description</label
               >
               <div class="form-floating fontStyle">
@@ -87,7 +89,7 @@
 
               <button
                 type="button"
-                class="btn bg-transparent mt-4 fontStyle"
+                class="btn bg-transparent text-white mt-4 fontStyle"
                 id="submitPost"
               >
                 Add Post
