--- a/post.html
+++ b/post.html
@@ -65,9 +65,9 @@
       <div class="row p-2 gap-4 justify-content-center">
         
         <div class="col-12 col-sm-12 col-md-4">
-          <div class="card p-4 borderColor">
+          <div class="card p-4 border-danger borderColor">
 
-            <h2 class="text-white my-3">Create a New Post</h2>
+            <h2 class="text-white text-center my-3" style="font-family: 'myFont';">Create a New Post</h2>
             <form class="p-2">
               <div class="mb-4">
                 <label for="post-title" class="form-label fs-3 text-white fontStyle"
@@ -89,7 +89,7 @@
 
               <button
                 type="button"
-                class="btn bg-transparent text-white mt-4 fontStyle"
+                class="btn btn-outline-danger bg-transparent text-white mt-4 fontStyle"
                 id="submitPost"
               >
                 Add Post
