--- a/my-blogs.html
+++ b/my-blogs.html
@@ -25,7 +25,7 @@
 <body class="bgBackground1">
     
 
-<nav class="navbar navbar-expand-lg bg-black">
+<nav class="navbar navbar-expand-lg">
       <div class="container navbar-container">
         <a class="navbar-brand text-white fs-2" href="post.html">My Post</a>
         <!-- Toggle button for mobile -->
