--- a/post.html
+++ b/post.html
@@ -61,8 +61,8 @@
       </div>
     </nav>
     
-    <div class="container-fluid mt-4">
-      <div class="row p-2 gap-4 justify-content-center">
+    <div class="container-fluid my-3">
+      <div class="row p-2 gap-4 align-items-center justify-content-center">
         
         <div class="col-12 col-sm-12 col-md-4">
           <div class="card p-4 border-danger borderColor">
