--- a/post.html
+++ b/post.html
@@ -24,7 +24,7 @@
   </head>
   <body class="bgBackground">
     <!-- post navbar -->
-    <nav class="navbar navbar-expand-lg z-3">
+    <nav class="navbar navbar-expand-lg">
       <div class="container navbar-container">
         <a class="navbar-brand text-white fs-2" href="#">My Post</a>
         <!-- Toggle button for mobile -->
