change ui again

--- a/post.html
+++ b/post.html
@@ -25,13 +25,13 @@
   <body class="bgBackground">
     <!-- post navbar -->
     <nav class="navbar navbar-expand-lg">
-      <div class="container navbar-container">
+      <div class="container navbar-container" style="font-family: 'myFont';">
         <a class="navbar-brand text-white fs-2" href="#">My Post</a>
         <!-- Toggle button for mobile -->
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-        <!--  navbaar links -->
+        
 <div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 						<li class="nav-item">
