--- a/post.html
+++ b/post.html
@@ -25,7 +25,7 @@
   <body class="bgBackground">
     <!-- post navbar -->
     <nav class="navbar navbar-expand-lg">
-      <div class="container navbar-container" style="font-family: 'myFont';">
+      <div class="container navbar-container" >
         <a class="navbar-brand text-white fs-2" href="#">My Post</a>
         <!-- Toggle button for mobile -->
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -40,24 +40,26 @@
 						<li class="nav-item">
 							<a class="nav-link fontStyle me-4 text-white"  href="my-blogs.html">My Blog</a>
 						</li>
+						<li class="nav-item">
+              <div class="profile-section">
+                <div class="user-profile">
+                  <img
+                    id="profile-avatar"
+                    src=""
+                    alt="Profile Picture"
+                    class="avatar"
+                  />
+                  <div class="user-details">
+                    <h3 id="profile-name">Loading...</h3>
+                    <p id="profile-email"></p>
+                  </div>
+                </div>
+                <button id="logoutBtn" class="logout-btn">Logout</button>
+              </div>
+						</li>
 					</ul>
-<!-- profile section -->
 
-        <div class="profile-section">
-          <div class="user-profile">
-            <img
-              id="profile-avatar"
-              src=""
-              alt="Profile Picture"
-              class="avatar"
-            />
-            <div class="user-details">
-              <h3 id="profile-name">Loading...</h3>
-              <p id="profile-email"></p>
-            </div>
-          </div>
-          <button id="logoutBtn" class="logout-btn">Logout</button>
-        </div>
+
       </div>
     </nav>
     
