--- a/post.html
+++ b/post.html
@@ -25,7 +25,7 @@
   <body class="bgBackground">
     <!-- post navbar -->
     <nav class="navbar navbar-expand-lg">
-      <div class="container navbar-container d-flex align-items-start" style="font-family: 'myFont';">
+      <div class="container navbar-container d-flex align-items-start navbarSize" style="font-family: 'myFont';">
         <a class="navbar-brand text-white fs-2" href="#">My Post</a>
         <!-- Toggle button for mobile -->
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
