finall code set

--- a/post.html
+++ b/post.html
@@ -91,7 +91,7 @@
 
               <button
                 type="button"
-                class="btn btn-outline-danger bg-transparent text-white mt-4 fontStyle"
+                class="btn btn-outline-danger bg-transparent text-danger mt-4 fontStyle"
                 id="submitPost"
               >
                 Add Post
