--- a/my-blogs.html
+++ b/my-blogs.html
@@ -26,7 +26,7 @@
     
 
 <nav class="navbar navbar-expand-lg">
-      <div class="container navbar-container">
+      <div class="container navbar-container d-flex align-items-start navbarSize" style="font-family: 'myFont';">
         <a class="navbar-brand text-white fs-2" href="post.html">My Post</a>
         <!-- Toggle button for mobile -->
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
