code change again

--- a/post.html
+++ b/post.html
@@ -67,7 +67,7 @@
       <div class="row p-2 gap-4 align-items-center justify-content-center">
         
         <div class="col-12 col-sm-12 col-md-4">
-          <div class="card p-4 border-danger borderColor">
+          <div class="card p-4 border-danger mb-5 borderColor">
 
             <h2 class="text-white text-center my-3" style="font-family: 'myFont';">Create a New Post</h2>
             <form class="p-2">
