--- a/my-blogs.html
+++ b/my-blogs.html
@@ -1,84 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Post page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css"
-    />
-    <title>My Blogs</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+
 </head>
-<body class="bgBackground1">
-    
 
-<nav class="navbar navbar-expand-lg">
+<body class="bgBackground">
+    <!-- post navbar -->
+    <nav class="navbar navbar-expand-lg">
       <div class="container navbar-container d-flex align-items-start navbarSize" style="font-family: 'myFont';">
-        <a class="navbar-brand text-white fs-2" href="post.html">My Post</a>
-        <!-- Toggle button for mobile -->
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-        <!--  navbaar links -->
-<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a class="nav-link text-white fontStyle" href="all-blogs.html">All Blogs</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link fontStyle me-4 text-danger" href="my-blogs.html">My Blog</a>
-						</li>
-					</ul>
-<!-- profile section -->
+            <a class="navbar-brand text-white fs-2" href="post.html">My Post</a>
+            <!-- Toggle button for mobile -->
+            <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="profile-section">
-          <div class="user-profile">
-            <img
-              id="profile-avatar"
-              src=""
-              alt="Profile Picture"
-              class="avatar"
-            />
-            <div class="user-details">
-              <h3 id="profile-name">Loading...</h3>
-              <p id="profile-email"></p>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link fontStyle text-white" href="all-blogs.html">All Blogs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fontStyle me-4 text-danger" href="my-blogs.html">My Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <div class="profile-section">
+                            <div class="user-profile">
+                                <img id="profile-avatar" src="" alt="Profile Picture" class="avatar" />
+                                <div class="user-details">
+                                    <h3 id="profile-name">Loading...</h3>
+                                    <p id="profile-email"></p>
+                                </div>
+                            </div>
+                            <button id="logoutBtn" class="logout-btn">Logout</button>
+                        </div>
+                    </li>
+                </ul>
             </div>
-          </div>
-          <button id="logoutBtn" class="logout-btn">Logout</button>
-        </div>
-      </div>
     </nav>
 
-  <!-- All blogs -->
+<div class="row justify-content-center ms-3 me-3" id="readMyPostBox"></div>
 
-    <div id="container1" class="container  d-flex gap-4 m-5 flex-wrap"></div>
-
-    <!-- loader -->
-
+<!-- loader -->
     <div id="loader-overlay">
-        <div class="spinner-border text-primary loader-spinner" role="status">
-            <span class="visually-hidden">Loading...</span>
-        </div>
-    </div>
+			<div class="spinner-border text-primary loader-spinner" role="status">
+				<span class="visually-hidden">Loading...</span>
+			</div>
+		</div>
 
-
- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
+    <!-- supabase script -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="app.js"></script>
-
 </body>
-</html>
 
+</html>
